fix overflow momentum scrolling

--- a/app/components/tabs/style.css
+++ b/app/components/tabs/style.css
@@ -1,3 +1,5 @@
+$nav-expanded-width: 10.5em;
+
 .container {
   width: 100%; height: 100%;
   display: flex;
@@ -17,6 +19,12 @@
   height: 100%; min-width: 4em;
 }
 
+@media (min-width: 768px) {
+  .nav {
+    min-width: $nav-expanded-width;
+  }
+}
+
 .button {
   height: 4em;
   display: flex;
@@ -28,7 +36,7 @@
 .content {
   flex-grow: 1;
   flex-shrink: 1;
-  overflow: auto;
+  /*overflow: auto;*/
   display: flex;
 }
 
